RESOLVED FIXED102532
[Chromium] fix FPS counter disappearing when changing page
https://bugs.webkit.org/show_bug.cgi?id=102532
Summary [Chromium] fix FPS counter disappearing when changing page
egraether
Reported 2012-11-16 09:58:49 PST
[Chromium] fix FPS counter disappearing when changing page
Attachments
Patch (1.58 KB, patch)
2012-11-16 10:17 PST, egraether
no flags
egraether
Comment 1 2012-11-16 10:17:36 PST
egraether
Comment 2 2012-11-16 10:19:57 PST
pfeldman can you please have a look?
egraether
Comment 3 2012-11-16 13:09:34 PST
caseq, please have a look at this too.
WebKit Review Bot
Comment 4 2012-11-20 10:55:17 PST
Comment on attachment 174718 [details] Patch Clearing flags on attachment: 174718 Committed r135300: <http://trac.webkit.org/changeset/135300>
WebKit Review Bot
Comment 5 2012-11-20 10:55:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.